# rust-tg-bot

./: Cargo.toml  LICENSE  README.md  generator.py  methodgen.py  typegen.py
.github/workflows/: rust.yml
examples/: abra.rs  echo.rs  raw_handler.rs  send_file.rs
src/: bot.rs  dispatcher.rs  error.rs  lib.rs  updater.rs
src/examples/: test.rs
src/handlers/: commandhandler.rs  mod.rs  rawhandler.rs
src/methods/: README.md  add_sticker_to_set.rs  answer_callback_query.rs  answer_inline_query.rs  answer_pre_checkout_query.rs  answer_shipping_query.rs  close.rs  copy_message.rs  create_chat_invite_link.rs  create_new_sticker_set.rs  delete_chat_photo.rs  delete_chat_sticker_set.rs  delete_message.rs  delete_sticker_from_set.rs  delete_webhook.rs  edit_chat_invite_link.rs  edit_message_caption.rs  edit_message_live_location.rs  edit_message_media.rs  edit_message_reply_markup.rs  edit_message_text.rs  export_chat_invite_link.rs  forward_message.rs  get_chat.rs  get_chat_administrators.rs  get_chat_member.rs  get_chat_members_count.rs  get_file.rs  get_game_high_scores.rs  get_me.rs  get_my_commands.rs  get_sticker_set.rs  get_updates.rs  get_user_profile_photos.rs  get_webhook_info.rs  kick_chat_member.rs  leave_chat.rs  log_out.rs  mod.rs  pin_chat_message.rs  (+39 more)
src/traits/: dispatcher.rs
src/types/: README.md  animation.rs  audio.rs  bot_command.rs  callback_game.rs  callback_query.rs  chat.rs  chat_invite_link.rs  chat_location.rs  chat_member.rs  chat_member_updated.rs  chat_permissions.rs  chat_photo.rs  chosen_inline_result.rs  contact.rs  dice.rs  document.rs  (+96 more)
