[package]
name = "rust-tg-bot"
version = "0.1.0"
authors = ["DragSama <49992845+DragSama@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.1"
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
