[package]
name = "rust_tg_bot"
version = "0.1.0"
authors = ["DragSama <49992845+DragSama@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.1", features = ["multipart"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.50"
dyn-clone = "1.0.4"
